# libgovf

./: API.txt  Makefile.am  README  autogen.sh  configure.ac  govf-1.0.pc.in
govf/: Makefile.am  govf-importer.c  govf-importer.h  govf.h
tools/: Makefile.am  govf-import.c
